--- a/code examples.tex
+++ b/code examples.tex
@@ -102,4 +102,13 @@
 	\subsection{Code listings}
 	\lstinputlisting[language=Python]{./resources/code/python/converge_to_minus_2.py}
 	
+	\subsection{Text block with background color}
+	\begin{tcolorbox}[enhanced jigsaw,colback=note_bg,boxrule=0pt,arc=0pt]
+		\begin{itemize}
+			\item Item 1
+			\item Item 2
+			\item Item 3
+		\end{itemize}
+	\end{tcolorbox}
+	
 \end{document}
