Extreme and Intermediate Value Theorems completed.

--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -26,9 +26,10 @@
 \usepackage{titlesec}
 \noautomath
 \usepackage[most]{tcolorbox}
+\usepackage{csquotes}
 
 \definecolor{note_bg}{RGB}{247,247,247}
-
+\AtBeginEnvironment{displayquote}{\small}
 
 
 \titleformat*{\subparagraph}{\small\bfseries}
