--- a/Analysis.tex
+++ b/Analysis.tex
@@ -466,30 +466,94 @@
 	}
 
 	\pagebreak
-	\searchableSubsection{Some problems on limits of sequences}{analysis}{\bigskip
-		\subsubsection{\small{ Let ${ (a_n)_{n \in \N{}} }$ be a sequence, and let ${ (b_n)_{n \in \N{}} }$ be the sequence defined by ${ b_n = \abs{a_n} }$ for ${ n \in \N{} }$. Which of the following two statements implies the other? }}
-		\textbf{\small{ 
-			\begin{enumerate}[label=\alph*)]
-				\item{${ (a_n) }$ converges.}
-				\item{${ (b_n) }$ converges.}
-			\end{enumerate}
-		}}
-		Answer: ${ a_n }$ converges ${ \implies b_n }$ converges also but ${ b_n }$ converges ${ \centernot\implies a_n }$ converges.\\
-		The first implication is because,
-		\begin{align*}
-		&& \abs{a_n} = \abs{a_n - a + a} &\leq \abs{a_n - a} + \abs{a}  \\
-		&\iff &  \abs{a_n} - \abs{a} &\leq \abs{a_n - a}  &\sidecomment{} \\
-		\end{align*}
-		\begin{align*}
-		&& \abs{a} = \abs{a - a_n + a_n} &\leq \abs{a_n - a} + \abs{a_n}  \\
-		&\iff & \abs{a} - \abs{a_n} &\leq \abs{a_n - a}  &\sidecomment{} \\
-		&\iff & \abs{a_n} - \abs{a} &\geq -\abs{a_n - a}  &\sidecomment{} \\
-		\end{align*}
-		which both together imply that ${ \abs{ \abs{a_n} - \abs{a} } \leq \abs{a_n - a} }$.\\
-		The latter non-implication is easy to see if one thinks of a sequence that consists of two subsequences that converge to 2 and -2. Then, their absolute value would converge to 2 but their values do not converge. Remember \autoref{theo:subseq_tends_to_same_limit}, for a sequence to converge to a limit, every subsequence of it must converge to the same limit.
+	\searchableSubsection{Examples of limits of sequences}{analysis}{\bigskip
+		\begin{exe}
+			\ex {\textbf{\small{ Let ${ (a_n)_{n \in \N{}} }$ be a sequence, and let ${ (b_n)_{n \in \N{}} }$ be the sequence defined by 
+						${ b_n = \abs{a_n} }$ for ${ n \in \N{} }$. Which of the following two statements implies the other? }}\\\\
+				Answer: ${ a_n }$ converges ${ \implies b_n }$ converges also but ${ b_n }$ converges ${ \centernot\implies a_n }$ converges.\\
+				The first implication is because,
+				\begin{align*}
+				&& \abs{a_n} = \abs{a_n - a + a} &\leq \abs{a_n - a} + \abs{a}  \\
+				&\iff &  \abs{a_n} - \abs{a} &\leq \abs{a_n - a}  &\sidecomment{} \\
+				\end{align*}
+				\begin{align*}
+				&& \abs{a} = \abs{a - a_n + a_n} &\leq \abs{a_n - a} + \abs{a_n}  \\
+				&\iff & \abs{a} - \abs{a_n} &\leq \abs{a_n - a}  &\sidecomment{} \\
+				&\iff & \abs{a_n} - \abs{a} &\geq -\abs{a_n - a}  &\sidecomment{} \\
+				\end{align*}
+				which both together imply that ${ \abs{ \abs{a_n} - \abs{a} } \leq \abs{a_n - a} }$.\\
+				The latter non-implication is easy to see if one thinks of a sequence that consists of two subsequences that converge to 2 and -2. Then, their absolute value would converge to 2 but their values do not converge. Remember \autoref{theo:subseq_tends_to_same_limit}, for a sequence to converge to a limit, every subsequence of it must converge to the same limit.\\
+			}
+			\ex {\textbf{\small{ What is the behaviour as ${ n \to \infty }$ of the following: }}\\\\
+				\begin{enumerate}[label=(\roman*)]
+					\item{${ \frac{2n^3 + 1}{n + 1}\left(\frac{3}{4}\right)^n }$}
+						\[ 0 < \frac{2n^3 + 1}{n + 1}\left(\frac{3}{4}\right)^n < \frac{3n^3}{n}\left(\frac{3}{4}\right)^n = 3n^2\left(\frac{3}{4}\right)^n \to 0 \]
+					\item{${ \frac{2^{2n} + n}{n^33^n + 1} }$}
+						\[ \frac{2^{2n} + n}{n^33^n + 1} = \frac{4^n + n}{n^33^n + 1} > \frac{4^n}{2n^33^n} = \frac{(4/3)^n}{2n^3} \to \infty \]
+				\end{enumerate}
+			}
+			\ex {\textbf{\small{ Let $(a_n)$ be a sequence of non-negative numbers. Prove that if ${ a_n \to L }$ as ${ n \to \infty }$ then ${ \sqrt{a_n} \to \sqrt{L} }$ as ${ n \to \infty }$.}}
+				\begin{proof}
+					We are told that ${ a_n \to L }$ as ${ n \to \infty }$ so we have,
+					\[ \forall \epsilon' > 0 \logicsep \exists N \logicsep \forall n > N \in \N{} \logicsep \abs{a_n - L} < \epsilon'. \]
+					We are also told that $(a_n)$ is non-negative so ${ L \geq 0 }$.\\
+					First, consider the possibility that ${ L = 0 }$. Then ${ \abs{a_n} < \epsilon' }$ for ${ n > N }$. But,
+					\[ \abs{a_n} = (\sqrt{a_n})^2 < \epsilon' \iff \sqrt{a_n} < (\epsilon')^2 \]
+					so that taking ${ \epsilon = (\epsilon')^2 }$ we obtain,
+					\[ \forall \epsilon > 0 \logicsep \exists N \logicsep \forall n > N \in \N{} \logicsep \abs{\sqrt{a_n}} < \epsilon. \]
+					The remaining possibility is that ${ L > 0 }$. Notice that the expression we're looking to bound can be rewritten as follows:
+					\[ \abs{\sqrt{a_n} - \sqrt{L}} = \abs{(\sqrt{a_n} - \sqrt{L})\frac{\sqrt{a_n} + \sqrt{L}}{\sqrt{a_n} + \sqrt{L}}} = \abs{\frac{a_n - L}{\sqrt{a_n} + \sqrt{L}}}. \]
+					Furthermore, since ${ a_n \to L }$ and ${ L > 0 }$, clearly ${ 0 < L/2 < L }$ and there will be some ${ \epsilon < L/2 }$ such that,
+					\[ L - L/2 < L - \epsilon < a_n < L + \epsilon < L + L/2 \iff \abs{a_n - L} <\epsilon < L/2. \]
+					This means that, inside this $\epsilon$-neighbourhood of $L$, we can find a constant lower bound on ${ \sqrt{a_n} + \sqrt{L} }$ as,
+					\[ \sqrt{a_n} + \sqrt{L} > \sqrt{L/2} + \sqrt{L} = C \]
+					for constant $C$. Now we have
+					\[ \abs{\sqrt{a_n} - \sqrt{L}} = \abs{\frac{a_n - L}{\sqrt{a_n} + \sqrt{L}}} < \frac{\abs{a_n - L}}{C} < \frac{\epsilon'}{C} \]
+					so we can take ${ \epsilon = \epsilon'/C }$ to obtain ${ \abs{a_n - L} < \epsilon }$ as required.
+				\end{proof}
+				\begin{proof}
+					This is an alternative proof of the ${ L > 0 }$ case using the fact that
+					\[ \sqrt{x + y} \leq \sqrt{x} + \sqrt{y}. \]
+					Choose $\epsilon$ such that ${ 0 < \epsilon \leq \sqrt{L} }$ and take $N$ so that, for ${ n > N }$, ${ \abs{a_n - L} < \epsilon^2 }$, or in other words ${ L - \epsilon^2 < a_n < L + \epsilon^2 }$. Then we have
+					\[ \sqrt{L} - \epsilon \leq \sqrt{L - \epsilon^2} < \sqrt{a_n} < \sqrt{L + \epsilon^2} \leq \sqrt{L} + \epsilon \]
+					which places $\sqrt{a_n}$ in $\epsilon$-neighbourhood of $L$, so we're done.\\
+					Note that we need ${ \epsilon \leq \sqrt{L} }$ for ${ \sqrt{L} - \epsilon \leq \sqrt{L - \epsilon^2} }$ and also -- so long as we are doing \textit{real} analysis -- this proof is only for the ${ L > 0 }$ case because, when ${ L = 0 }$, ${ \sqrt{L - \epsilon^2} }$ will be a complex number.
+				\end{proof}
+			}
+			\ex {\textbf{\small{ Let $a_n$ be a positive decreasing sequence. Show that, if there exist numbers $N$ and $\alpha$ such that
+						\[ 0 < \frac{a_{n+1}}{a_n} < \alpha < 1 \hspace{20pt} \forall n > N \]
+						then ${ a_n \to 0 }$ as ${ n \to \infty }$. But if, on the other hand, we have
+						\[ 0 < \frac{a_{n+1}}{a_n} < 1 \hspace{20pt} \forall n > N \]
+						then we cannot conclude that ${ a_n \to 0 }$.
+				 }}\\\\
+				\note{The basic principle here is that, if a convergent sequence converges to a non-zero limit, then the ratio of consecutive terms must tend to 1. If the ratio of consecutive terms remains below 1 then the sequence must go to zero.}
+				If ${ \frac{a_{n+1}}{a_n} < \alpha }$ then $\alpha$ is an upper bound on the ratio of consecutive terms so we can deduce that,
+				\[ a_{n+1} < \alpha a_n < a_n \hspace{30pt} \sidecomment{since ${ \alpha < 1 }$} \]
+				and that, if we let ${ a_N }$ be the value of the sequence at ${ n = N }$ and consider the sequence for ${ n > N }$,
+				\[ a_n < \alpha^{n - N}a_N \]
+				which is of the form,
+				\[ a_n < \alpha^n C \]
+				for constant $C$. So we have bound the values of the sequence below ${ \alpha^n C }$ which clearly goes to 0 as ${ n \to \infty }$. Since we are told that the sequence is positive so that $a_n$ is also bounded below by 0, we can conclude, by Sandwich Theorem, that ${ a_n \to 0 }$ as ${ n \to \infty. \hspace{10pt}\qed}$\\\\
+				An alternative way of showing the same thing is to use the algebra of limits and the fact that, in a convergent sequence, any subsequence must also converge to the same limit (\autoref{theo:subseq_tends_to_same_limit}) to deduce that if ${ a_n \to L }$ then we must also have ${ a_{n+1} \to L }$. Then, if ${ L \neq 0 }$ we can apply the algebra of limits to obtain,
+				\[ \lim_{n \to \infty} \frac{a_{n+1}}{a_n} = \frac{L}{L} = 1 \]
+				which contradicts ${ \frac{a_{n+1}}{a_n} < \alpha < 1 }$. Therefore, ${ L = 0.  \hspace{10pt}\qed}$\\\\
+				On the other hand, if ${ \frac{a_{n+1}}{a_n} \to 1 }$ as ${ n \to \infty }$ then the sequence may converge to 0 or to some other value. For example:
+				\begin{enumerate}[label=(\roman*)]
+					\item{${\bm{ a_n = \frac{1}{n} + 1 }}$}
+					\[ \frac{a_{n+1}}{a_n} = \frac{n(n+2)}{(n+1)^2} =\frac{n^2 + 2n}{n^2 + 2n + 1} \to 1 \text{ as } n \to \infty \]
+					and clearly,
+					\[ \lim_{n \to \infty} \frac{1}{n} + 1 = 1. \]
+					But also,
+					\item{${\bm{ a_n = \frac{1}{n} }}$}
+					\[  \frac{a_{n+1}}{a_n} = \frac{n}{n+1} \to 1 \text{ as } n \to \infty \]
+					even though
+					\[ \lim_{n \to \infty} \frac{1}{n} = 0. \]
+				\end{enumerate}
+		}
+		\end{exe}
 	}
 	
-	\bigskip\bigskip
+	\pagebreak
 	\searchableSubsection{Limits of functions}{analysis}{\bigskip
 		\subsubsection{Definition of the limit of a function}
 		\boxeddefinition{Let ${ f: \R{} \mapsto \R{} }$ be a function. We say that $L$ is the \textbf{limit of ${\bm{ f(x) }}$ as ${\bm{ x }}$ approaches ${\bm{ a }}$} if, for each ${ \epsilon > 0 }$ there exists ${ \delta > 0 }$ such that,
@@ -554,10 +618,10 @@
 			\end{itemize}
 			\smallskip
 			More formally, the definition of ${ \lim_{x \to a} f(x) = L }$ is,
-			\[ \forall \epsilon > 0 \logicsep \exists \delta > 0 \suchthat 0 < \abs{x - a} < \delta \implies \abs{f(x) - L} < \epsilon. \]
-			But if $f(a)$ is defined then,
-			\[ 0 = \abs{x - a} \implies x = a \implies f(x) = f(a) \implies \abs{f(x) - f(a)} = 0. \]
-			Therefore, if ${ \lim_{x \to a} f(x) = f(a) }$, then
+			\[ \forall \epsilon > 0 \logicsep \exists \delta \suchthat 0 < \abs{x - a} < \delta \implies \abs{f(x) - L} < \epsilon. \]
+			But if $f(a)$ is defined, then when ${ \abs{x - a} = 0 }$ (i.e. when ${ x = a }$) we have 
+			\[ f(x) = f(a) \implies \abs{f(x) - f(a)} = 0 < \epsilon. \]
+			Therefore, if $f(a)$ is defined and ${ \lim_{x \to a} f(x) = f(a) }$, then
 			\[ \forall \epsilon > 0 \logicsep \exists \delta > 0 \suchthat \abs{x - a} < \delta \implies \abs{f(x) - f(a)} < \epsilon. \]		
 		}
 		
@@ -590,7 +654,8 @@
 			${ \lim_{x \to a} (f \circ g)(x) = \lim_{x \to a} f(g(x)) = f(\lim_{x \to a} g(x)) }$
 		\end{corollary}
 	
-		\subsubsection{Unifying continuity of functions with sequences}
+		\bigskip
+		\subsubsection{Continuity of functions over sequences}
 		We now give an alternative definition of continuity which ties in the concept of limits for sequences.
 		\labeledTheorem{A function $ f $ is continuous at $ a $ if and only if for each sequence $ (x_n) $ such that ${ \lim_{n \to \infty} x_n = a  }$ we have ${ \lim_{n \to \infty} f(x_n) = f(a) }$.}{continuity_of_functions_over_sequences}
 		\note{
@@ -640,10 +705,10 @@
 			or alternatively,
 			\[ \forall \epsilon > 0 \logicsep \forall \delta > 0 \logicsep \exists x \logicsep (\abs{x - a} < \delta) \wedge (\abs{f(x) - f(a)} \geq \epsilon). \]
 			So, this says that we can choose any arbitrary ${ \epsilon > 0 }$ and for all ${ \delta > 0 }$ there will be some $x$ in the $\delta$-neighbourhood of $a$ such that ${ \abs{f(x) - f(a)} \geq \epsilon. }$\\\\
-			Now, if we choose a value of $\delta$ that depends on a natural number $n$ in such a way that ${ \delta \to 0 }$ as ${ n \to \infty }$ - for example, if ${ \delta = 1/n }$ - then the $\delta$-neighbourhoods around $a$ will get smaller as ${ n \to \infty. }$ Then we can select an $x$ from the $\delta$-neighbourhood that corresponds to a particular value of $n$ and call it $x_n$ and, in this way, we create a sequence $x_n$ that converges to $a$. So we have ${ \lim_{n \to \infty} x_n = a. }$\\
-			But now, for every $\delta$ there is an $x_n$ in the $\delta$-neighbourhood of $a$ with ${ \abs{f(x_n) - f(a)} \geq \epsilon }$ so that
-			\[ \lim_{n \to \infty} f(x_n) = f(a) \]
-			is not true. Therefore this is a contradiction of the hypothesis $P_1$.
+			Now, if we choose a value of $\delta$ that depends on a natural number $n$ in such a way that ${ \delta \to 0 }$ as ${ n \to \infty }$ -- for example, if ${ \delta = 1/n }$ -- then the $\delta$-neighbourhoods around $a$ will get smaller as ${ n \to \infty. }$ Then we can select an $x$ from the $\delta$-neighbourhood that corresponds to a particular value of $n$ and call it $x_n$ and, in this way, we create a sequence $x_n$ that converges to $a$. So we have ${ \lim_{n \to \infty} x_n = a. }$\\
+			But now, for every $\delta$ there is an $x_n$ in the $\delta$-neighbourhood of $a$ with ${ \abs{f(x_n) - f(a)} \geq \epsilon }$ and, if we choose this value for $x_n$, we have a constructed a sequence that converges to $a$ but
+			\[ \lim_{n \to \infty} f(x_n) \neq f(a) \]
+			which contradicts hypothesis $P_1$.
 		\end{proof}
 		\begin{corollary}
 			\label{cor:lim_of_func_of_convergent_sequence_is_func_of_limit}
@@ -665,10 +730,10 @@
 				1 & x \text{ is rational}
 				\end{cases}. 
 				\]
-				This function is nowhere continuous so that in every neighbourhood of a point $a$ you can always find values of $x$ closer in (i.e. in smaller neighbourhoods around $a$) such that ${ f(x) }$ is further away from the value of $f(a)$. So this function never converges anywhere but \textit{is} bounded because it only ever takes values of 1 or 0 so, clearly, its maximum is 1 and minimum is 0.
+				This function is nowhere continuous because between every two irrational numbers there is a rational number (and vice-versa) so $f(x)$ is flipping between 0 and 1 in every neighbourhood of every point however small a neighbourhood we consider. So this function never converges anywhere but \textit{is} bounded because it only ever takes values of 1 or 0 so, clearly, its maximum is 1 and minimum is 0.
 			}\label{ex:dirichlet_function}
 			\ex{
-				The function ${ f(x) = 1/x }$ over the interval ${ (0,1) }$ is continuous at every point but unbounded as it goes to infinity as ${ x \to 0 }$. If we consider the same function over the closed interval ${ [0,1] }$ then we no longer have continuity over this interval as there is a singularity at ${ x=0 }$.
+				The function ${ f(x) = 1/x }$ over the interval ${ (0,1] }$ is continuous at every point but unbounded as it goes to infinity as ${ x \to 0 }$. If we consider the same function over the closed interval ${ [0,1] }$ then we no longer have continuity over this interval as there is a singularity at ${ x=0 }$.
 			}\label{ex:reciprocal_function}
 		\end{exe}
 		
@@ -678,59 +743,142 @@
 			Note that, even if $f$ is defined at every point in ${ [a,b] }$, if it is not continuous then it \textit{may} not be bounded. There \textit{do} exist functions that are not continuous but bounded (for example the Dirichlet Function \ref{ex:dirichlet_function}) but there also exist functions that are not continuous and unbounded such as the reciprocal function \ref{ex:reciprocal_function}. So, functions that are not continuous on a closed interval may be bounded or not; and functions that are continuous on an open interval also may or may not be bounded (again, the reciprocal function is an example of a function that is continuous on an open interval but not bounded); but here we will show that functions that are continuous on a closed interval must be bounded on that interval.
 		}
 		\begin{proof}
+			It may be tempting to begin trying to prove this by reasoning as follows.\\			
+			\begin{displayquote}
 			That $f$ is continuous on ${ [a,b] }$ means that, for any ${ c \in (a,b) }$,
 			\[ \forall \epsilon > 0 \logicsep \exists \delta > 0 \logicsep \abs{x - c} < \delta \implies \abs{f(x) - f(c)} < \epsilon. \]
-			This means that the value of $f(x)$ must be finite everywhere in ${ (a,b) }$ as, choosing any fixed point $c$ in the open interval, ${ \abs{x - c} }$ is finite and, therefore, less than some $\delta$ thus implying that ${ \abs{f(x) - f(c)} < \epsilon }$ for some finite $\epsilon$. So, continuity on the open interval implies that, if there is any point $c$ such that $f(c)$ is finite, then all $f(x)$ in the open interval must also be finite.\\
-			However, it may still be the case that the function becomes infinite at one or both of the endpoints of the interval (as, in fact, we saw with the reciprocal function \ref{ex:reciprocal_function}). But the other part of the definition of continuity of $f$ on ${ [a,b] }$ is that
-			\[ \lim_{x \to a^+} f(x) = f(a) \text{ and } \lim_{x \to b^-} f(x) = f(b) \]
-			which, along with the requirement for continuity that $f$ be defined on all points in the closed interval, ensures that the function does not become infinite at the bounds of the interval either.\\
-			Therefore, since at no point in the closed interval ${ [a,b] }$ does $f$ become infinite, we can say that
-			\[ \exists M \logicsep \forall x \in [a,b] \logicsep \abs{f(x)} \leq M. \]					
+			This means that the value of $f(x)$ must be finite everywhere in ${ (a,b) }$ as, choosing any fixed point $c$ in the open interval, ${ \abs{x - c} }$ is finite and, therefore, less than some $\delta$ thus implying that ${ \abs{f(x) - f(c)} < \epsilon }$ for some finite $\epsilon \dots$\\
+			\end{displayquote}
+			
+			However this is \textbf{dead wrong!} If we take the example of the reciprocal function (\ref{ex:reciprocal_function}) over the interval ${ (0,1] }$: If we take $x$-values approaching 0, the value of $f(x)$ grows unbounded. For any given $x$-value it will be less than some finite $\epsilon$ but we can always find another $x$-value with a greater value of $f(x)$. So, there is no maximum $\epsilon$ and so, also no maximum value of $f(x)$ on the interval.\\
+			
+			Another tempting way to prove this is as follows.\\
+			
+			\begin{displayquote}
+			A closed interval is an interval such that every sequence of values in the interval converges to a point in the interval.\\ 
+			That $f$ is continuous on ${ [a,b] }$ implies that for every sequence, $x_n$, of values in ${ [a,b] }$ that converges to some point in ${ c \in [a,b] }$, ${ \lim_{n \to \infty} f(x_n) = f(c) }$. Furthermore, that the interval is closed implies that every sequence of values in the interval converges to a point in the interval. Therefore, we can conclude that $f(x)$ at every point in ${ [a,b] }$ exists and is finite so that $f$ is bounded and obtains a maximum on the interval.\\
+			\end{displayquote}
+			
+			There are two issues with this:
+			\begin{enumerate}
+				\item{The statement about the nature of a closed interval that the proof relies upon has not been proven.}
+				\item{That $f(x)$ is defined and finite for all ${ x \in [a,b] }$ is taken as proof that the function is bounded and obtains a maximum in the interval.}
+			\end{enumerate}
+			To deal with issue (1) -- if we're not going to prove the proposition about closed intervals as a pre-requisite of the proof -- we need to develop a proof that doesn't rely on this characteristic of closed intervals. To deal with (2) meanwhile, we need to explicitly prove boundedness and that $f$ obtains a maximum.\\
+			The proof given in LSE Abstract Mathematics course material follows.\\
+			
+			\begin{displayquote}
+			Suppose first that $ f $ is unbounded above. For each ${ n \in N }$, let $ x_n $ be a point in ${ [a, b] }$ such that ${ f(x_n) > n }$. The sequence $ (x_n) $ is bounded, so has a convergent subsequence ${ (x_{k_n}) }$, tending to some limit $ c $ (by Theorem 10.11). Necessarily ${ c \in [a, b] }$. Since $ f $ is continuous at $ c $, ${ f(x_{k_n}) \to f(c) }$ as ${ n \to \infty }$. But this contradicts the construction of the sequence $ (x_n) $, since ${ f(x_{k_n}) > n \to \infty }$. So $ f $ is bounded above. Let ${ M = \text{sup}\setc{f(x)}{x \in [a, b]} }$. For each ${ n \in N }$, let $ x_n $ be a point in ${ [a, b] }$ such that ${ f(x_n) > M - \frac{1}{n} }$. Again take a convergent subsequence ${ (x_{k_n}) }$ of $ (x_n) $, tending to some limit ${ c \in [a, b] }$. Arguing as before, we see ${ f(c) = M }$.
+			\end{displayquote}
+		
+			This proof says: Assume that $f$ is unbounded on the interval. Then we can construct a sequence of $x$-values such that, for the $n$th value $x_n$, ${ f(x_n) > n }$. This is possible because, if $f$ is unbounded, for any value of $n$, there is some subinterval of $x$-values such that for each of them ${ f(x) > n }$ and any interval of the real numbers contains an infinite number of real numbers and so, a sequence $x_n$ with ${ n \to \infty }$. Note that, at this point, $x_n$ is an arbitrary sequence which is not necessarily convergent (it could bounce around the interval).\\
+			Then, we notice that this sequence $x_n$ is necessarily bounded (as it is a subinterval of ${ [a,b] }$) and so we invoke the Bolzano-Weierstrass Theorem, \autoref{theo:every_bounded_seq_has_convergent_subseq} (called Theorem 10.11 in the quoted proof), to deduce that it has a convergent subsequence which we call $x_{k_n}$ and call its limit $c$.\\
+			At this point we can use the continuity of $f$ on the interval to deduce that ${ f(x_{k_n}) \to f(c) }$ as ${ n \to \infty }$ by which we obtain a contradiction to the condition we set on the values of $x_{k_n}$ when we constructed the sequence -- namely that ${ f(x_{k_n}) > n }$. Notice that this is constructing a sequence $x_{k_n}$ such that $f(x_{k_n})$ grows without bound as ${ n \to \infty }$ and then saying, "but the limit of $x_{k_n}$ as ${ n \to \infty }$ is $c$ which is inside the interval and so (by continuity) the limit of $f(x_{k_n})$ as ${ n \to \infty }$ is $f(c)$ -- a fixed finite value". This is the point where the fact that the interval ${ [a,b] }$ is closed comes into play -- if the interval were not closed it would be possible that $c$ was not inside the interval and then we would not be able to invoke continuity to assert that the limit of $f(x_{k_n})$ over this sequence was finite.\\
+			So, now we have shown that if a function is continuous over a closed interval then assuming that the function is unbounded produces a contradiction and, therefore, we can conclude that it is, in fact, bounded.\\
+			The last thing that needs to be proven is that $f$ obtains its maximum in the interval. Having shown that the function is bounded on the interval we now know that there exists
+			\[ M = \text{sup}\setc{f(x)}{x \in [a, b]} \]
+			and we need to show that there is such an $x$-value in ${ [a,b] }$ that ${ f(x) = M }$. In an open interval this might not be the case as the supremum of the function on the interval might occur as the limit of $f$ over a sequence of $x$-values converging to a point that lies outside the interval. So, in this case, we construct a convergent sequence such that ${ f(x_{k_n}) \to M }$ as ${ n \to \infty }$ by selecting $x_n$ such that ${ f(x_n) = M - \frac{1}{n} }$. This is possible because the definition of the supremum says that, because it is the \textit{lowest} upper bound,
+			\[ \forall \epsilon > 0 \logicsep \exists f(x_n) \logicsep f(x_n) > M - \epsilon \]
+			and so we are letting ${ \epsilon = \frac{1}{n} }$. Then, as previously, we take a convergent subsequence of this sequence and name it $x_{k_n}$. So, as before, we have a sequence converging on some point, we'll call it ${ c \in [a,b] }$, at which $f$ is continuous so that ${ f(x_{k_n}) \to M }$ as ${ n \to \infty }$ implies that ${ M = f(c) }$. This, in turn, means that $f$ obtains a maximum in the interval.			 
 		\end{proof}
 	
 		\bigskip
 		\subsubsection{Intermediate Value Theorem}
-		\labeledTheorem{Let $f$ be continuous on ${ [a,b] }$ and \WLOG assume ${ f(a) < f(b) }$. Then, for all ${ K \suchthat f(a) < K < f(b) }$, there exists some ${ c \in (a,b) }$ with ${ f(c) = K }$.
+		\labeledTheorem{Let $f$ be continuous on ${ [a,b] }$ with ${ f(a) < f(b) }$. Then, for all ${ K \suchthat f(a) < K < f(b) }$, there exists some ${ c \in (a,b) }$ with ${ f(c) = K }$.
 		}{intermediate_value_theorem}
 		\note{Note that this theorem is \textbf{not} written for an interval such that ${ f(a) \leq f(b) }$ because if ${ f(a) = f(b) }$ then the only ${ K \suchthat f(a) \leq K \leq f(b) }$ is ${ f(a) = K = f(b) }$. But now it is \textbf{not} true to say that there exists some ${ c \in (a,b) }$ with ${ f(c) = K }$ as there is no reason why the value of $f(x)$ at the bounds of the interval should be repeated somewhere in the interior of the interval.}
+		\medskip
+		We begin by proving a special case from which the general proof will follow.
+		\begin{lemma}
+			Let $f$ be continuous on ${ [a,b] }$ with ${ f(a) < 0 < f(b) }$. Then there exists some ${ c \in (a,b) }$ with ${ f(c) = 0 }$.
+		\end{lemma}
 		\begin{proof}
-			Continuity at the interval bounds $a$ and $b$ means that,
-			\[ 0 < x - a < \delta_1 \implies \abs{f(x) - f(a)} < \epsilon_1, \]
-			\[ 0 < b - x < \delta_2 \implies \abs{f(x) - f(b)} < \epsilon_2. \]
-%			So $f(x)$ is bound in neighbourhoods of $f(a)$ and $f(b)$ as follows,
-%
-%			Then, if we make the neighbourhoods large enough so that they overlap, the lower neighbourhood (the one centred around the lower value $f(a)$) will have its upper bound inside the upper neighbourhood while the lower bound of the upper neighbourhood will be inside the lower neighbourhood. 
-			If we choose as the value of both $\delta_1$ and $\delta_2$ a value greater than ${ (b - a)/2 }$ then the intervals of $x$-values will overlap. If we consider the $x$-values in the intersection of the intervals, for these values of $x$, we have,
-			\[ f(a) - \epsilon_1 < f(x) < f(a) + \epsilon_1, \]
-			\[ f(b) - \epsilon_2 < f(x) < f(b) + \epsilon_2 \]
-			and, for the overlapping section,
-			\[ f(b) - \epsilon_2 < f(x) < f(a) + \epsilon_1. \]
-			Then, if we make $\epsilon_1$ a function of $\epsilon_2$ as follows,
-			\[ \epsilon_2 = \epsilon_1 + f(a) + f(b) \]
-			then we have,
-			\[ -(f(a) + \epsilon_1) < f(x) < (f(a) + \epsilon_1) \]
-			
-			So, we have a lower neighbourhood around $f(a)$ and an upper neighbourhood around $f(b)$ as follows,
-			\[ f(a) - \epsilon_1 < f(x) < f(a) + \epsilon_1, \]
-			\[ f(b) - \epsilon_2 < f(x) < f(b) + \epsilon_2 \]
-			If ${ \epsilon_1 > \abs{f(a)} }$ and ${ \epsilon_2 > \abs{f(b)} }$ then both neighbourhoods contain ${ f(x) = 0 }$. In this case, there is some interval of $x$ such that ${ f(x) }$ lies inside both the lower and upper neighbourhood -- in the overlap of the two. In the overlap we have,
-			\[ f(b) - \epsilon_2 < f(x) < f(a) + \epsilon_1. \]
-			Now if we let $\epsilon_1$ vary freely but make $\epsilon_2$ a function of $\epsilon_1$ like so,
-			\[ \epsilon_2 = f(a) + f(b) + \epsilon_1 \]
-			then we still have ${ \epsilon_1 > \abs{f(a)} }$ and ${ \epsilon_2 > \abs{f(b)} }$ as,
-			\[ \epsilon_1 > \abs{f(a)} \iff -\epsilon_1 < f(a) < \epsilon_1 \iff 0 < f(a) + \epsilon_1 < 2\epsilon_1 \]
-			so ${ \epsilon_2 > f(b) }$ and, conversely, if we assume that ${ \epsilon_2 > \abs{f(b)} }$ then,
-			\[ \epsilon_2 > \abs{f(b)} \iff -\epsilon_2 < f(b) < \epsilon_2 \iff -\epsilon_2 - f(b) < 0 < \epsilon_2 - f(b) \]
-			\[ \epsilon_1 = \epsilon_2 - f(a) - f(b) > -f(a) = \abs{f(a)} \hspace{20pt}\sidecomment{since ${ f(a) < 0 }$}. \]
-			Therefore,
-			\[ \epsilon_2 = f(a) + f(b) + \epsilon_1 \implies [ \epsilon_1 > \abs{f(a)} \iff \epsilon_2 > \abs{f(b)} ]. \]
-			Now we have,
-			\[ f(b) - \epsilon_2 = -f(a) - \epsilon_1 < f(x) < f(a) + \epsilon_1 \]
-			which is equivalent to
-			\[ \abs{f(x)} < f(a) + \epsilon_1 = \epsilon_3. \]
-			Now, since ${ f(a) + \epsilon_1 > 0 }$ we also have ${ \epsilon_3 > 0 }$ and it can become arbitrarily small as long as it is greater than $\abs{f(a)}$. So we have shown that continuity over the closed interval and ${ f(a) < f(b) }$ imply that we can find subintervals of ${ [a,b] }$ such that ${ f(x) }$ is constricted to ever-decreasing neighbourhoods of 0. In other words, for some ${c \suchthat a < c < b, \; f(x) \to 0 }$ as  ${ x \to c }$ and since $f$ is continuous on the interval this implies that ${ f(c) = 0 }$ also. 
+			A first attempt at this proof is given below.\\
+			\begin{displayquote}
+				Continuity at the interval bounds $a$ and $b$ means that, for some ${ \epsilon_1, \epsilon_2 > 0 }$,
+				\[ \exists \delta_1 \logicsep 0 \leq x - a < \delta_1 \implies \abs{f(x) - f(a)} < \epsilon_1, \]
+				\[ \exists \delta_2 \logicsep 0 \leq b - x < \delta_2 \implies \abs{f(x) - f(b)} < \epsilon_2. \]
+				
+				So, we have a lower neighbourhood around $f(a)$ and an upper neighbourhood around $f(b)$ as follows,
+				\[ f(a) - \epsilon_1 < f(x) < f(a) + \epsilon_1, \]
+				\[ f(b) - \epsilon_2 < f(x) < f(b) + \epsilon_2 \]
+				If ${ \epsilon_1 > \abs{f(a)} }$ and ${ \epsilon_2 > \abs{f(b)} }$ then both neighbourhoods contain ${ f(x) = 0 }$. Therefore, there is some interval of $x$ such that ${ f(x) }$ lies inside both the lower and upper neighbourhood -- in the overlap of the two. In the overlap we have,
+				\[ f(b) - \epsilon_2 < f(x) < f(a) + \epsilon_1. \]
+				Now if we let $\epsilon_1$ vary freely but make $\epsilon_2$ a function of $\epsilon_1$ like so,
+				\[ \epsilon_2 = f(a) + f(b) + \epsilon_1 \]
+				then we still have ${ \epsilon_1 > \abs{f(a)} }$ and ${ \epsilon_2 > \abs{f(b)} }$ as,
+				\[ \epsilon_1 > \abs{f(a)} \iff -\epsilon_1 < f(a) < \epsilon_1 \iff 0 < f(a) + \epsilon_1 < 2\epsilon_1 \]
+				so ${ \epsilon_2 > f(b) }$ and, conversely, if we assume that ${ \epsilon_2 > \abs{f(b)} }$ then,
+				\[ \epsilon_2 > \abs{f(b)} \iff -\epsilon_2 < f(b) < \epsilon_2 \iff -\epsilon_2 - f(b) < 0 < \epsilon_2 - f(b) \]
+				\[ \epsilon_1 = \epsilon_2 - f(a) - f(b) > -f(a) = \abs{f(a)} \hspace{20pt}\sidecomment{since ${ f(a) < 0 }$}. \]
+				Therefore,
+				\[ \epsilon_2 = f(a) + f(b) + \epsilon_1 \implies [ \epsilon_1 > \abs{f(a)} \iff \epsilon_2 > \abs{f(b)} ]. \]
+				Now we have,
+				\[ f(b) - \epsilon_2 = -f(a) - \epsilon_1 < f(x) < f(a) + \epsilon_1 \]
+				which is equivalent to
+				\[ \abs{f(x)} < f(a) + \epsilon_1 = \epsilon_3. \]
+				Now, since ${ f(a) + \epsilon_1 > 0 }$ we also have ${ \epsilon_3 > 0 }$ and it can become arbitrarily small by making ${ \abs{f(a)} - \epsilon_1 }$ arbitrarily small. So we have shown that continuity over the closed interval and ${ f(a) < f(b) }$ imply that we can find subintervals of ${ [a,b] }$ such that ${ f(x) }$ is constricted to ever-decreasing neighbourhoods of 0. In other words, for some ${c \suchthat a < c < b, \; f(x) \to 0 }$ as  ${ x \to c }$ and since $f$ is continuous on the interval this implies that ${ f(c) = 0 }$ also. 
+			\end{displayquote}
+			This is not bad but suffers from vagueness in a couple of areas: the overlap of the lower and upper neighbourhoods probably needs to be more precisely defined and, certainly, the final part of the proof stating that confining $f(x)$ to ever-decreasing neighbourhoods of 0 implies that there is some $c$ such that ${ f(c) = 0 }$ needs to be drawn much more explicitly.\\\\
+			Here is the proof given in LSE Abstract Mathematics.\\
+			\begin{displayquote}
+				We construct a sequence of intervals ${ [a_n, b_n] }$ such that
+				\begin{enumerate}
+					\item{${ f(a_n) < 0,\; f(b_n) > 0 }$ for each $ n $}
+					\item{${ [a_{n+1}, b_{n+1}] \subseteq [a_n, b_n] }$ for each $ n $.}
+				\end{enumerate}				
+				We start by letting ${ [a_1, b_1] = [a, b]. }$ Then for each ${ n \geq 1 }$, we define ${ [a_{n+1}, b_{n+1}] }$ as follows.\\
+				
+				Let ${ c_n = (a_n + b_n)/2 }$, be the midpoint of the previous interval. If ${ f(c_n) = 0, }$ then the
+				theorem is proved and so we need not continue constructing intervals!\\
+				
+				Otherwise, if ${ f(c_n) < 0 }$, we define ${ a_{n+1} = c_n }$ and ${ b_{n+1} = b_n }$. And if ${ f(c_n) > 0 }$, we define
+				${ b_{n+1} = c_n }$ and ${ a_{n+1} = a_n }$. Note that the condition 1. is satisfied by choosing our intervals in this manner.
+				Moreover, note that the ${ (n + 1) }$st interval is half the size of the $n$th interval and so
+				${ b_{n+1} - a_{n+1} \leq (b_1 - a_1)/2^n }$. It follows that
+				\[ \lim_{n \to \infty} (b_n - a_n) = 0.  \tag{3}\]
+				
+				Finally, note that $ (a_n) $ is increasing and bounded above (by $ b_1 $) and so it has a limit; similarly $ (b_n) $ is decreasing and bounded below and so has a limit. Thus by (3) (and algebra of limits) these limits are equal to, say, c. Thus by continuity (using \autoref{theo:continuity_of_functions_over_sequences}),
+				\[ f(c) = \lim_{n \to \infty} f(b_n) \geq 0, \]
+				where the last inequality follows from the fact that each ${ f(b_n) \geq 0 }$ (in fact > 0). Similarly,
+				\[ f(c) = \lim_{n \to \infty} f(a_n) \leq 0. \]
+				Thus $ f(c) $ must be equal to zero, and the proof is complete.
+			\end{displayquote}
 		\end{proof}
-		
+		Clearly, the general proof of the Intermediate Value Theorem follows naturally from this because,
+		\begin{itemize}
+			\item{If ${ f(a) > f(b) }$ then we can consider the function ${ g(x) = -f(x) }$ so that we have ${ g(a) < g(b) }$,}
+			\item{If we have ${ K \suchthat f(a) < K < f(b) }$ with ${ K \neq 0 }$ we can consider ${ g(x) = f(x) - K }$ so that we have ${ g(a) < 0 < g(b) }$.}
+		\end{itemize}
+		So, the general problem posed in the Intermediate Value Theorem is reducible to the case we have proved.
+	}
+
+	\pagebreak
+	\searchableSubsection{Relationship Between Sequences and Functions}{analysis}{\bigskip
+		Let ${ f: \R{} \mapsto \R{},\; f(x) = y. }$ Now imagine that we take regular intervals on the domain, say, interval 1. We name the $x$-values at the upper bound of these intervals $x_1, x_2, \dots$ for $x = 1, 2, \dots$. Then, the corresponding $y$-values, $y = f(x_1), f(x_2), \dots$ can be named $y_1, y_2, \dots$. In this way, we have defined a sequence, ${ y_n = f(x_n) }$ where ${ x_n \in \N{} }$ (note that this is a different notation from that used before where a sequence ${ x_n = f(n) }$ for ${ n \in \N{} }$).\\
+		Looking at the derivative of the function,
+		\[ \frac{dy}{dx} \approxeq \frac{\Delta y}{\Delta x} = \frac{ f(x_{n+1}) - f(x_n) }{1} = f(x_{n+1}) - f(x_n). \]
+		While the ratio of consecutive terms is,
+		\[ \frac{y_{n+1}}{y_n} = \frac{y_n + \Delta y}{y_n} = \frac{f(x_{n+1})}{f(x_n)} =  \frac{f(x_n) + (f(x_{n+1}) - f(x_n))}{f(x_n)}. \]
+		Note, also, that
+		\[ \frac{y_n + \Delta y}{y_n} = 1 + \frac{\Delta y}{y_n} \approxeq 1 + \frac{dy/dx}{y} = 1 + \frac{d}{dx} \ln{y} \]
+		which is to say that ${ \frac{\Delta y}{y_n} }$ is the discrete form of the log derivative.
+		Clearly, when ${ \Delta y > 0 }$, we can put this in the form
+		\[ \frac{y_{n+1}}{y_n} = 1 + \frac{\Delta y}{y_n} = 1 + \frac{ \Delta y/y_n }{1} = \frac{1 + h}{1}. \]
+		If ${ \Delta y < 0 }$ however,
+		\[ \frac{y_n + \Delta y}{y_n} = \frac{1}{y_n/(y_n + \Delta y)} = \frac{1}{\frac{y_n + \Delta y - \Delta y}{y_n + \Delta y}} = \frac{1}{1 + \frac{-\Delta y}{y_n + \Delta y}} = \frac{1}{1 + h}. \]
+		If ${ \frac{\Delta y}{y_n} }$ does not go to 0 then the ratio of consecutive terms stays below 1 and the sequence converges to 0. If it does go to 0 then the ratio of consecutive terms goes to 1 and the sequence may converge to 0 or to some non-zero value. These cases appear (proof?) to be distinguishable by looking at how fast ${ \frac{\Delta y}{y_n} }$ goes to 0. For example,
+		\begin{enumerate}[label=(\roman*)]
+			
+			\item{${\bm{ a_n = \frac{1}{n} + 1 }}$}
+			\[ \lim_{n \to \infty} \frac{1}{n} + 1 = 1 \]
+			\[ \frac{\Delta a}{a_n} = \frac{-1}{(n+1)^2} \]
+			
+			\item{${\bm{ a_n = \frac{1}{n} }}$}
+			\[ \lim_{n \to \infty} \frac{1}{n} = 0 \]
+			\[ \frac{\Delta a}{a_n} = \frac{-1}{n+1} \]
+		\end{enumerate}
+		Maybe the fact that ${ \frac{\Delta y}{y_n} }$ goes to 0 faster as ${ n \to \infty }$ in the first case indicates that it converges before it gets to 0?
 	}
   
 \end{document}
