--- a/Analysis.tex
+++ b/Analysis.tex
@@ -634,6 +634,11 @@
 			\end{itemize}
 		}
 	
+		\boxeddefinition{A function is \textbf{left continuous} or \textbf{continuous on the left} at $a$ if,
+			\[ \lim_{x \to a-} f(x) = f(a). \]
+			Obviously, from the other side, a function can be \textbf{right continuous}.
+		}
+	
 		\labeledTheorem{Let ${ f,g : \R{} \to \R{} }$ be functions that are continuous at ${ a \in R }$ and $ c $ be
 			any real number. Then ${ \abs{f}, (cf), (f - g), (f + g), (f(x)g(x)) }$ are all continuous at $ a $, and
 			${ (f/g)  }$ is continuous provided ${ g(x) \neq 0 }$ for any $ x $ in some neighbourhood of $ a $.}{}
