--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -57,6 +57,7 @@
 
 
 \newcommand{\wrong}{\begingroup\color{red}\text{Wrong!}\endgroup}
+\newcommand{\TODO}[1]{\textcolor{red}{\underline{TODO:} #1}}
 
 \DeclarePairedDelimiterX\setc[2]{\{}{\}}{\,#1 \,\;\delimsize\vert\;\, #2\,}
 \DeclareRobustCommand{\N}[1]{\mathbb{N}^{#1}}
