Attempt at bash build script (not currently working on mac). Pdfs added to pdf/ folder.

--- a/MathsNotesBase.tex
+++ b/MathsNotesBase.tex
@@ -17,7 +17,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
 \usepackage{amsfonts}
-\usepackage{epstopdf}
+\usepackage[outdir=./]{epstopdf}
 \usepackage[table]{xcolor}
 \usepackage{siunitx}
 \usepackage{booktabs}
